test/types/tuple/ferguson/tuple-size-mismatch-for.good
tuple-size-mismatch-for.chpl:3: error: tuple size must match the number of grouped variables
