test/types/tuple/ferguson/tuple-size-mismatch-for.chpl
var A:[1..2] 2*int;

for (a,b,c) in A {
  writeln("a=", a, " b=", b, " c=", c);
}
